fix: Fixed horizontal overflowing

--- a/src/components/molecules/SectionDivider/styles.scss
+++ b/src/components/molecules/SectionDivider/styles.scss
@@ -6,6 +6,7 @@
   gap: rem(50px);
   height: rem(80px);
   margin: 0 auto;
+  overflow: hidden;
   width: 100%;
 
   h2 {
